--- a/informe/entrega-final/disenio.tex
+++ b/informe/entrega-final/disenio.tex
@@ -219,7 +219,7 @@ Agregar esto no sería nada difícil, sólo habría que agregar un campo mas a l
 
 En caso que se quisiera filtrar además por la feature de los espectáculos en vivo, se deberá agregar una nueva clase que herede de FiltrosExtra y filtre por esta categoría.
 
-Como se ve, las modificiaciones involucran sólo agregar código (y modificar Valoración, que es correcto que deba modificarse), con lo que el diseño es resiliente frente a este eje de cambio.
+Como se ve, las modificaciones involucran sólo agregar código (y modificar Valoración, que es correcto que deba modificarse), con lo que el diseño es resiliente frente a este eje de cambio.
 
 \subsubsection{El diseño y comportamiento de los distintos filtros de búsqueda de bares}
 
